# cs415.lewis.sp24

./: .gitignore  README.md
Exam01/: CMakeLists.txt  inputgen.cpp
Module02/forkexamples/: CMakeLists.txt  dup_ex.cpp  exec_ex.cpp  fork_ex.cpp  wait_ex.cpp  waitorkill.cpp
Module02/procmgt/: CMakeLists.txt  dataloc.cpp  docloc.c  getpid.cpp
Module03/inputsim/: CMakeLists.txt  inputsim.cpp
Module03/intro/: CMakeLists.txt  chrono.cpp  fnpvslamb.cpp  hello.cpp  hellolambda.cpp  race.cpp  thvector.cpp
Module03/matmult/: CMakeLists.txt  matmult.cpp
Module04/: futurewait.cpp
Module04/barrier/: CMakeLists.txt  mybarrier.hpp  spinlockbarrier.hpp  stlbarriers.cpp
Module04/deadlock/: CMakeLists.txt  deadlock.cpp  mutexes.cpp  races1.cpp  usinglocks.cpp
Module04/devsim/: CMakeLists.txt  devsim.cpp
Module04/diningphils1/: CMakeLists.txt  diningphil.cpp  diningphils2.cpp
Module04/futures/: CMakeLists.txt  futures.cpp
Module05/SimpleSocket/: CMakeLists.txt  ClientSocket.cpp  ClientSocket.h  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h  SocketException.h  simple_client_main.cpp  simple_server_main.cpp
Module05/shm/: CMakeLists.txt  mmapdemo.c  shm_client.c  shm_server.c
Module07/mmusim/apps/mmusim/: CMakeLists.txt  mmusimtest.cpp
Module07/mmusim/include/: memmgtunit.hpp
